# IQ-Gen

./: LICENSE  OpenAiDemo.py  README.md  app.py  audio.webm  build.sh  conversation_history.txt  g_openai_test.py  main.py  openai_demo.py  package-lock.json  package.json  pyproject.toml  pythoncode.py  quest_gen_demo.py  requirements.txt  sentiment_text_helpers.py  template.txt  test_using_plain_text.py  transcribe.py  whisper_implementation.py
frontend/: package-lock.json  package.json
frontend/src/: App.js
openai_practice/: gabe_openai.py  jennifer_openai.py  jennifer_training.txt
openai_practice/flagged/: gabe_openai.py
openai_tests/: jennifer_openai.py
outdated/: openai_demo.py  test_using_transcription.py
outdated/openai_practice/: jennifer_openai.py
outdated/question-team/: conduct_interview.py  keywords.txt  question.py
question-team/: conduct_interview.py  keywords.txt
static/: script.js  styles.css
templates/: index.html
tone-team/: emotion_messages.py  sentiment_text_helpers.py  tone.py
